Fixed page jump menu

--- a/blocks/page-jump-menu/page-jump-menu.css
+++ b/blocks/page-jump-menu/page-jump-menu.css
@@ -567,10 +567,6 @@ video {
   margin-top: 1rem;
 }
 
-.page-jump-menu-wrapper :is(.mt-\[-1px\]) {
-  margin-top: -1px;
-}
-
 .page-jump-menu-wrapper :is(.block) {
   display: block;
 }
@@ -608,19 +604,6 @@ video {
   overflow: hidden;
 }
 
-.page-jump-menu-wrapper :is(.rounded-full) {
-  border-radius: 9999px;
-}
-
-.page-jump-menu-wrapper :is(.rounded-none) {
-  border-radius: 0px;
-}
-
-.page-jump-menu-wrapper :is(.\!bg-danaherpurple-500) {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(117 35 255 / var(--tw-bg-opacity)) !important;
-}
-
 .page-jump-menu-wrapper :is(.bg-danaherlightblue-50) {
   --tw-bg-opacity: 1;
   background-color: rgb(239 251 253 / var(--tw-bg-opacity));
@@ -633,14 +616,6 @@ video {
 
 .page-jump-menu-wrapper :is(.stroke-black) {
   stroke: #000;
-}
-
-.page-jump-menu-wrapper :is(.stroke-danaherpurple-500) {
-  stroke: #7523FF;
-}
-
-.page-jump-menu-wrapper :is(.stroke-white) {
-  stroke: #fff;
 }
 
 .page-jump-menu-wrapper :is(.stroke-1) {
@@ -682,11 +657,6 @@ video {
   letter-spacing: 0.05em;
 }
 
-.page-jump-menu-wrapper :is(.\!text-white) {
-  --tw-text-opacity: 1 !important;
-  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
-}
-
 .page-jump-menu-wrapper :is(.text-danaherblack-500) {
   --tw-text-opacity: 1;
   color: rgb(51 51 51 / var(--tw-text-opacity));
@@ -695,12 +665,6 @@ video {
 .page-jump-menu-wrapper :is(.shadow-lg) {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.page-jump-menu-wrapper :is(.shadow-none) {
-  --tw-shadow: 0 0 #0000;
-  --tw-shadow-colored: 0 0 #0000;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -737,26 +701,6 @@ video {
   .page-jump-menu-wrapper :is(.lg\:px-0) {
     padding-left: 0px;
     padding-right: 0px;
-  }
-}
-
-.page-jump-menu-wrapper :is(.\[\&_\.page-jump-menu-wrapper\]\:mx-auto .page-jump-menu-wrapper) {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.page-jump-menu-wrapper :is(.\[\&_\.page-jump-menu-wrapper\]\:flex .page-jump-menu-wrapper) {
-  display: flex;
-}
-
-@media (min-width: 768px) {
-  .page-jump-menu-wrapper :is(.\[\&_\.page-jump-menu-wrapper\]\:md\:max-w-7xl .page-jump-menu-wrapper) {
-    max-width: 80rem;
-  }
-
-  .page-jump-menu-wrapper :is(.\[\&_\.page-jump-menu-wrapper\]\:md\:max-w-max .page-jump-menu-wrapper) {
-    max-width: -moz-max-content;
-    max-width: max-content;
   }
 }
 
